# food-pov-hack

./: .dockerignore  .env  .gitignore  Dockerfile  Dockerfile.node  Dockerfile.python  Makefile  README.md  heroku.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: python-app.yml
.streamlit/: config.toml
app/: 1_Barcode_Scanner.py  1_Food_to_Bank.py  client.py
app/pages/: 2_All_Items.py  2_Inventory.py
service/: __init__.py  constants.py  crud.py  database.py  main.py  models.py  schemas.py  simulator.py
src/: App.js  index.css
src/components/AddByBarcode/: AddByBarcode.jsx
src/components/AddItemButton/: AddItemButton.jsx
src/components/AddManual/: AddManual.jsx
src/components/Header/: Header.jsx
src/components/NavBar/: NavBar.jsx
src/components/ReusableButton/: ReusableButton.jsx
src/pages/: AddNewProduct.jsx
tests/service/: conftest.py  test_main.py
web/: 1_Barcode_Scanner.py  images.py
web/pages/: 2_Inventory.py
