[tool.poetry]
name = "food-pov-hack"
version = "0.1.0"
description = ""
authors = ["Team 6"]

packages = [
    { include = "service" },
]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
pytest = "^7.1.2"
pydantic = "^1.9.1"
SQLAlchemy = "^1.4.37"
pandas = "^1.4.2"
SQLAlchemy-Utils = "^0.38.2"

[tool.poetry.dev-dependencies]
typer = "^0.4.1"
pytest = "^7.1.2"
isort = "^5.10.1"
black = "^22.3.0"
pytest-asyncio = "^0.18.3"
requests = ">=2.10.0"
flake8 = "^4.0.1"

[tool.black]
line-length = 120
verbose = true
skip-string-normalization = true
fast = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
