[tool.poetry]
name = "food-pov-hack"
version = "0.1.0"
description = ""
authors = ["Team 6"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
pydantic = "^1.9.1"
SQLAlchemy = "^1.4.37"
numpy = "^1.22.4"
python-dotenv = "^0.20.0"
streamlit = "1.10.0"
pyzbar = "^0.1.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
isort = "^5.10.1"
black = "^22.3.0"
requests = ">=2.10.0"
flake8 = "^4.0.1"
opencv-python = "^4.6.0"

[tool.black]
line-length = 120
verbose = true
skip-string-normalization = true
fast = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
